--- a/appVue/src/assets/styles/themes/default/variables.less
+++ b/appVue/src/assets/styles/themes/default/variables.less
@@ -1,14 +1,4 @@
-
-:root {
-  /* 主色调 */
-  --primary-color: #3498db;
-  --primary-hover: #2980b9;
-  
-  /* 辅助色 */
-  --success-color: #2ecc71;
-  --warning-color: #f39c12;
-  
-  /* 中性色 */
-  --text-color: #2c3e50;
-  --bg-color: #ecf0f1;
-}
+@color-background: var(--color-background);
+@color-background-d: var(--color-background-d);
+@color-text: var(--color-text);
+@color-text-d: var(--color-text-d);
