--- a/appVue/src/assets/styles/themes/dark.less
+++ b/appVue/src/assets/styles/themes/dark.less
@@ -1,10 +1,10 @@
-@primary-color: #f59e32;
+// @primary-color: #f59e32;
 
-// Add CSS variables for dynamic theme switching
-:root {
-    --primary-color: @primary-color;
-    --color-background: #f59e32;
-    --color-background-d: #f59e32;
-    --color-text: #f59e32;
-    --color-text-d: #f59e32;
-}
+// // Add CSS variables for dynamic theme switching
+// :root {
+//     --primary-color: @primary-color;
+//     --color-background: #f59e32;
+//     --color-background-d: #f59e32;
+//     --color-text: #f59e32;
+//     --color-text-d: #f59e32;
+// }
